# Pet-Mk-IV

./: .gitignore  LICENSE  README.md  ros_melodic_setup.txt
.github/workflows/: learn-github-actions.yml
3Dmechanic/: README.md
Linux/: BootTimeShowNodeIP-LCD.py  README.md  ShowStatus-LCD.py  launchMenu.py
Linux/etc/: rc.local
Project_stuff/: Pet_Mk.IV Statemachine_Line_Folowerpptx.pptx  readme.txt
Project_stuff/Images/: readme.md  readme.txt
UnitTest/: README.md  ReadMe.md
UnitTest/Camera/: klick.sh
UnitTest/Distance/: distance(HC-SR04)-2Wire.py  distance(HC-SR04).py  distance_HC_SR04.py  distance_thread.py
UnitTest/Gyro/: GY-521.py  GY-521_test2.py
UnitTest/I2C_LCD_Display/: LCD_2x16_test.py  LinuxStatusOnLCD-display.py  lcd_i2c.py
UnitTest/LightBeacon/: LightBeacon.ino
UnitTest/LightBeacon_staticPowerOn/: LightBeacon_staticPowerOn.ino
UnitTest/LineFollower/: OpticalSensors_x3_v2.py
UnitTest/LineFollower_RPi/: OpticalSensors_x3.py  OpticalSensors_x3_v2.py
UnitTest/LineSensor_Nano/: LineSensor_Nano.ino
UnitTest/Ljus/: ljus-mörker(bh1750).py
UnitTest/Motor/: TurnLeftRightForwardBackSpin(L298N).py  snurra(L298N).py
UnitTest/RPi_1xUltraSoundSensors(HC-SR04)/: distance_HC_SR04.py
UnitTest/RPi_3xUltraSoundSensors(HC-04)/: RPi_3xUltraSoundSensors(HC-04).py
UnitTest/RPi_CameraTest/: klick.sh
UnitTest/RPi_Engine(L298N)_RPi/: L298NHBridge.py
UnitTest/RPi_senseHat/: SenseHAT-IMU-odometry.py
UnitTest/SenseHat/: SenseHAT-IMU-visaGir(verZ).py
UnitTest/arduino_1xUltraSoundSensor_HC-04/: arduino_1xUltraSoundSensor_HC-04.ino
UnitTest/arduino_2xUltraSoundSensors_HC-04/: arduino_2xUltraSoundSensors_HC-04.ino
UnitTest/arduino_2xUltraSoundSensors_HC-SR04/: arduino_2xUltraSoundSensors_HC-SR04.ino
UnitTest/arduino_i2c_scanner/: arduino_i2c_scanner.ino
UnitTest/arduino_lightBeacon/: RotatingLED.cpp
UnitTest/arduino_lineSensor_FC-123/: arduino_lineSensor_FC-123.ino
UnitTest/i2c_scanner/: i2c_scanner.ino
UnitTest/pet_mk_iv_3xUltraSoundSensors_HW-test/: pet_mk_iv_3xUltraSoundSensors_HW-test.ino
UnitTest/pet_mk_v_2xUltraSoundSensors_HW-test/: pet_mk_v_2xUltraSoundSensors_HW-test.ino
arduino_sketches/: CustomMsgGuide.txt
arduino_sketches/main/: dist_sensors.cpp  engines.ino  line_followers.ino  main.ino  ros.h  ros_time_operators.ino
diagnos/: README.md  RPi_CurrentSensor(ina219).py  RPi_UPSmonitoring(UPS_18650_Lite).py  ros1_cmd_vel_stop.sh  ros1_cmd_vel_turn.sh  ros1_cmd_vel_twist.sh
diagnostics/: RPi_4chADconverter(ADS1115).py
doc/: README.md
pet_mk_iv_arduino/: CMakeLists.txt  package.xml
pet_mk_iv_arduino/firmware/: CMakeLists.txt  chatter.cpp  chatter.h  dist_sensors.cpp  dist_sensors.h  engines.cpp  engines.h  line_followers.cpp  line_followers.h  main.cpp  timer.h
pet_mk_iv_arduino/firmware/include/: arduino_module.h  chatter.h  dist_sensors.h  engine_module.h  engines.h  ir_remote_module.h  light_beacon.h  light_beacon_module.h  line_followers.h  line_sensor_module.h  modules.h  prgmem_string.h  ros.h  rosserial_node.h  timer.h  ultrasound.h  ultrasound_module.h
pet_mk_iv_arduino/firmware/src/: arduino_module.cpp  dist_sensors.cpp  engine_module.cpp  engines.cpp  ir_remote_module.cpp  light_beacon.cpp  light_beacon_module.cpp  line_followers.cpp  line_sensor_module.cpp  main.cpp  prgmem_string.cpp  rosserial_node.cpp  ultrasound.cpp  ultrasound_module.cpp
pet_mk_iv_arduino/firmware/src/nano/: modules.cpp
pet_mk_iv_arduino/firmware/src/uno/: modules.cpp
pet_mk_iv_arduino/launch/: arduino.launch  arduino_nano.launch  arduino_uno.launch
pet_mk_iv_arduino/pet_mk_iv_nano/: CMakeLists.txt
pet_mk_iv_arduino/pet_mk_iv_nano/src/: modules.cpp
pet_mk_iv_arduino/pet_mk_iv_uno/: CMakeLists.txt
pet_mk_iv_arduino/pet_mk_iv_uno/src/: modules.cpp
pet_mk_iv_arduino/scripts/: reload_ros_lib  upload_firmware  upload_firmware_nano  upload_firmware_uno
pet_mk_iv_arduino/src/: CMakeLists.txt  ultrasound_adapter_node.cpp
pet_mk_iv_arduino_aux/: CMakeLists.txt  package.xml
pet_mk_iv_arduino_aux/firmware/: CMakeLists.txt  chatter.h  main.cpp  ros_time_operators.cpp  ros_time_operators.h  timer.h
pet_mk_iv_arduino_aux/firmware/include/: IRremoteLib.h  chatter.h  irremote.h
pet_mk_iv_arduino_aux/firmware/src/: chatter.cpp  irremote.cpp  main.cpp
pet_mk_iv_arduino_aux/launch/: arduino.launch  arduino_aux.launch
pet_mk_iv_arduino_aux/scripts/: reload_ros_lib  upload_firmware
pet_mk_iv_control/: CMakeLists.txt  package.xml
pet_mk_iv_control/config/: mpc_parameters.yaml
pet_mk_iv_control/include/pet_mk_iv_control/: kinematic_model.h  mpc.h  mpc_node.h  mpc_ros.h  parameterization.h  parameterization2d.h  pose2d.h  residuals.h  rotation2d.h  setpoint.h  trajectory.h
pet_mk_iv_control/launch/: mpc.launch
pet_mk_iv_control/src/: kinematic_model.cpp  mpc.cpp  mpc_node.cpp  mpc_ros.cpp  parameterization.cpp  parameterization2d.cpp  pose2d.cpp  residuals.cpp  rotation2d.cpp  setpoint.cpp  trajectory.cpp
pet_mk_iv_control/test/: CMakeLists.txt
pet_mk_iv_control/test/launch/: prototype.launch
pet_mk_iv_control/test/src/: prototype_test.cpp
pet_mk_iv_description/: CMakeLists.txt  README.md  package.xml
pet_mk_iv_gazebo/: CMakeLists.txt  package.xml
pet_mk_iv_launch/: CMakeLists.txt  package.xml
pet_mk_iv_localisation/: CMakeLists.txt  package.xml
pet_mk_iv_localisation/include/: imu_measurement.h  kalman_filter.h  kalman_node.h  measurement.h  sonar_measurement.h  startup_utility.h
pet_mk_iv_localisation/launch/: localisation.launch
pet_mk_iv_localisation/nodes/: imu_mpu6050.py  inertial_integrator.py
pet_mk_iv_localisation/src/: imu_measurement.cpp  kalman_filter.cpp  kalman_node.cpp  measurement.cpp  sonar_measurement.cpp  startup_utility.cpp
pet_mk_iv_mission_control/: CMakeLists.txt  package.xml
pet_mk_iv_msgs/: CMakeLists.txt  package.xml
pet_mk_iv_path_planner/: CMakeLists.txt  package.xml
pet_mk_iv_simulation/: CMakeLists.txt  README.md  other_files.md  package.xml
ros_lcd_driver/: CMakeLists.txt  README.md  package.xml
test_pkg/: CMakeLists.txt  package.xml
(+213 files in other folders)
