<?xml version="1.0"?>
<package format="2">
  <name>pet_mk_iv_localisation</name>
  <version>0.0.0</version>
  <description>The pet_mk_iv_localisation package</description>

  <maintainer email="karl.viktor.kull@gmail.com">Viktor Kull</maintainer>

  <license>MIT</license>

  <url type="website">http://github.com/kullken/Pet-Mk-IV</url>

  <author email="karl.viktor.kull@gmail.com">Viktor Kull</author>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf2_ros</depend>
  <depend>ugl_ros</depend>

  <depend>geometry_msgs</depend>
  <depend>pet_mk_iv_msgs</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>python-smbus</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
